added the header section and header style

--- a/index.html
+++ b/index.html
@@ -6,12 +6,51 @@
     <title>Kids School</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="quicksand-normal">
     <header>
-
+        <nav>
+            <div class="nav-container">
+                <div class="nav-content">
+                    <img src="assets/logo.png" alt="this is a lo">
+                    <h4>SCHOOL</h4>
+                </div>
+                <div class="nav-content">
+                    <ul>
+                        <li><a class="orange" href="">Home</a></li>
+                        <li><a class="sky-blue" href="">About</a></li>
+                        <li><a class="aquea" href="">Facilities</a></li>
+                        <li><a class="light-blue" href="">Admission</a></li>
+                    </ul>
+                </div>
+                <div class="nav-content">
+                    <button class="nav-btn">Contact</button>
+          
+                </div>
+            </div>
+        </nav>
+        <div id="hr-line"></div>
+        <section class="banner">
+            <div class="banner-container">
+                <div class="banner-content">
+                    <h1><span class="empower">Empowering</span> <br> <span class="students">students from small age</span> <span class="vision">towards vision</span></h1>
+                    <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                    <button>Enroll Now</button>
+                </div>
+                <div class="banner-content">
+                    <img src="assets/hero-kids.png" alt="">
+                </div>
+            </div>
+        </section>
     </header>
     <main>
+        <!-- Standard Curriculum start -->
+        <section class="standard">
+            <h2 class="standard-title primary-text">Standard Curriculum</h2>
+            <div class="standard-container">
 
+            </div>
+
+        </section>
     </main>
     <footer>
 
