--- a/index.html
+++ b/index.html
@@ -47,7 +47,24 @@
         <section class="standard">
             <h2 class="standard-title primary-text">Standard Curriculum</h2>
             <div class="standard-container">
-
+                <div class="standard-content standard-description1">
+                    <img src="assets/kinder.png" alt="">
+                    <h4 class="secondary-text">Kinder (3-6) Years</h4>
+                    <p class="third-text">Cum sociis natoque penatibus et magnisdis parturient montes, nascetur ridiculusmu sdis parturient</p>
+                    <a class="read-more1" href="">Read More</a>
+                </div>
+                <div class="standard-content standard-description2">
+                    <img src="assets/elementary.png" alt="">
+                    <h4 class="secondary-text">Elementary School</h4>
+                    <p class="third-text">Cum sociis natoque penatibus et magnisdis parturient montes, nascetur ridiculusmu sdis parturient</p>
+                    <a class="read-more2" href="">Read More</a>
+                </div>
+                <div class="standard-content standard-description3">
+                    <img src="assets/middle.png" alt="">
+                    <h4 class="secondary-text">Middle (10-16) Years</h4>
+                    <p class="third-text">Cum sociis natoque penatibus et magnisdis parturient montes, nascetur ridiculusmu sdis parturient</p>
+                    <a class="read-more3" href="">Read More</a>
+                </div>
             </div>
 
         </section>
