added some responsive media query

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
                     <a class="read-more3" href="">Read More</a>
                 </div>
             </div>
-
+            <div class="arrow-image-container">
+                <img src="assets/icons8-arrow-50.png" alt="">
+                <img src="assets/icons8-arrow-50 (1).png" alt="">
+            </div>
         </section>
     </main>
     <footer>
