added the stories section and add some style

--- a/index.html
+++ b/index.html
@@ -71,6 +71,54 @@
                 <img src="assets/icons8-arrow-50 (1).png" alt="">
             </div>
         </section>
+
+        <!-- our stories section start  -->
+        <section class="our-stories">
+            <div class="our-stories-container">
+                <h3 class="my-stories primary-text">Our Stories</h3>
+                <div class="card-container">
+                    <div class="card-content1">
+                        <img src="assets/story-1.png" alt="">
+                        <div class="november1">
+                        <button>November 19, 2019</button>
+                        <h5>A fun toddler coloring training on classroom</h5>
+                        <p>Beautiful branding for changes by Never Now in Australia. changes is a platform for open discussion in an inclusive and collaborative environment, providing the...</p>
+                        </div>
+                    </div>
+                    <div class="card-content2">
+                        <div class="card-content-description">
+                            <img src="assets/story-2.png" alt="">
+                            <div class="november2">
+                            <button>November 19, 2019</button>
+                            <h6 class="fourth-text">Find out if a school fits the family’s needs</h6>
+                            </div>
+                        </div>
+                        <div class="card-content-description">
+                            <img src="assets/story-3.png" alt="">
+                            <div class="november2">
+                            <button>November 19, 2019</button>
+                            <h6 class="fourth-text">Summer math & literacy centres for kids</h6>
+                            </div>
+                        </div>
+                        <div class="card-content-description">
+                            <img src="assets/story-4.png" alt="">
+                            <div class="november2">
+                            <button>September 10, 2019</button>
+                            <h6 class="fourth-text">Classroom management techniques for new tutors</h6>
+                            </div>
+                        </div>
+                        <div class="card-content-description">
+                            <img src="assets/story-5.png" alt="">
+                            <div class="november2">
+                            <button>July 19, 2019</button>
+                            <h6 class="fourth-text">Conversation rhymes improve kids listening</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <button id="view-all">View All</button>
     </main>
     <footer>
 
