--- a/index.html
+++ b/index.html
@@ -122,7 +122,31 @@
         </section>
     </main>
     <footer>
-
+        <section class="footer-section">
+            <div class="footer-container">
+                <div class="footer-content1">
+                    <img src="assets/kids.png" alt="">
+                    <h3>Kids Education</h3>
+                    <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+                </div>
+                <div class="footer-content2">
+                    <h4>About School</h4>
+                    <a href="">Home</a>
+                    <a href="">About</a>
+                    <a href="">Facilities</a>
+                    <a href="">Admission</a>
+                </div>
+                <div class="footer-content3">
+                    <h4>Keep In Touch</h4>
+                    <div>
+                        <img src="assets/fb.png" alt="">
+                        <img src="assets/dribble.png" alt="">
+                        <img src="assets/twitter.png" alt="">
+                        <img src="assets/google+.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
