added the footer section style

--- a/index.html
+++ b/index.html
@@ -125,16 +125,20 @@
         <section class="footer-section">
             <div class="footer-container">
                 <div class="footer-content1">
+                    <div id="education">
                     <img src="assets/kids.png" alt="">
-                    <h3>Kids Education</h3>
+                    <h3>Kids <br> Education</h3>
+                    </div>
                     <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
                 </div>
                 <div class="footer-content2">
                     <h4>About School</h4>
-                    <a href="">Home</a>
-                    <a href="">About</a>
-                    <a href="">Facilities</a>
-                    <a href="">Admission</a>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Facilities</a></li>
+                        <li><a href="">Admission</a></li>
+                    </ul>
                 </div>
                 <div class="footer-content3">
                     <h4>Keep In Touch</h4>
