added some information in html file, please sent it

--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
                 <div class="standard-content standard-description1">
                     <img src="assets/kinder.png" alt="">
                     <h4 class="secondary-text">Kinder (3-6) Years</h4>
-                    <p class="third-text">Cum sociis natoque penatibus et magnisdis parturient montes, nascetur ridiculusmu sdis parturient</p>
+                    <p class="third-text">Kindergarten for children ages 3–6 years old is a stage of education that focuses on building a foundation for children's academic, social, and personal growth. It's also known as pre-school, nursery, or playgroup. so we should take care our child.</p>
                     <a class="read-more1" href="">Read More</a>
                 </div>
                 <div class="standard-content standard-description2">
                     <img src="assets/elementary.png" alt="">
                     <h4 class="secondary-text">Elementary School</h4>
-                    <p class="third-text">Cum sociis natoque penatibus et magnisdis parturient montes, nascetur ridiculusmu sdis parturient</p>
+                    <p class="third-text">An elementary school is a school where children are taught for the first six or sometimes eight years of their education. [mainly US] ...the move from elementary school to middle school or junior high. Right now our bangladesh started  their education.</p>
                     <a class="read-more2" href="">Read More</a>
                 </div>
                 <div class="standard-content standard-description3">
                     <img src="assets/middle.png" alt="">
                     <h4 class="secondary-text">Middle (10-16) Years</h4>
-                    <p class="third-text">Cum sociis natoque penatibus et magnisdis parturient montes, nascetur ridiculusmu sdis parturient</p>
+                    <p class="third-text">The years between 10 and 16 are part of the adolescent phase of life, which is the time between childhood and adulthood. This period is marked by rapid physical, cognitive, and psychosocial growth. So, everybody we should take care our body in this period.</p>
                     <a class="read-more3" href="">Read More</a>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                     <img src="assets/kids.png" alt="">
                     <h3>Kids <br> Education</h3>
                     </div>
-                    <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+                    <p>A quality education for children is crucial for their overall development, enabling them to acquire essential knowledge, skills, and critical thinking abilities that prepare them for a successful future.</p>
                 </div>
                 <div class="footer-content2">
                     <h4>About School</h4>
